infra/terraform/main.tf
resource "aws_instance" "app" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  subnet_id              = data.aws_subnets.default.ids[0]
  vpc_security_group_ids = [aws_security_group.ec2.id]
  iam_instance_profile   = aws_iam_instance_profile.ec2.name
  key_name               = var.key_pair_name

  root_block_device {
    volume_type = "gp3"
    volume_size = var.root_volume_size_gb
  }

  user_data = templatefile("${path.module}/user_data.sh.tftpl", {
    git_repo_url  = var.git_repo_url
    shutdown_hour = var.nightly_shutdown_hour
  })

  tags = {
    Name = "learnova-app"
  }
}

import {
  to = aws_instance.app
  id = "i-074bf4c6e39e3dfeb"
}
